# congol

./: README.md  pyproject.toml
.github/workflows/: congol-app.yml
data/: patterns.toml
src/congol/: __main__.py  cli.py  grid.py  pattern.py  patterns.toml  views.py
tests/: conftest.py  test_grid.py  test_pattern.py
