[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ConGoL"
dynamic = ["version"]
requires-python = ">= 3.11"
dependencies = [
    "pandas==2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "mypy==1.5",
]

[project.scripts]
congol = "congol.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "congol.__version__"}